--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "start": "sass --watch src/scss:dist/css & live-server",
     "format": "prettier -w src/**/*.js",
     "lint": "eslint src/**/*.js",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "npm run test-unit",
+    "test-unit": "jest"
   },
   "keywords": [],
   "author": "Noroff",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.19.3",
+    "@babel/preset-env": "^7.19.4",
     "eslint": "^8.52.0",
+    "jest": "^29.7.0",
+    "jest-localstorage-mock": "^2.4.26",
     "live-server": "^1.2.2",
     "prettier": "^3.0.3",
     "sass": "^1.54.8"
@@ -34,5 +40,9 @@
     "*.scss": [
       "prettier --write"
     ]
+  },
+  "jest": {
+    "resetMocks": false,
+    "setupFiles": ["jest-localstorage-mock"]
   }
 }
