update eslint.json to ignore jest

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,10 @@
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
+    "globals": {
+        "test": "readonly",
+        "expect": "readonly"
+      },
     "rules": {
     }
 }
