--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "css-frameworks-ca",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Test",
   "type": "module",
   "main": "index.js",
@@ -43,6 +43,8 @@
   },
   "jest": {
     "resetMocks": false,
-    "setupFiles": ["jest-localstorage-mock"]
+    "setupFiles": [
+      "jest-localstorage-mock"
+    ]
   }
 }
