--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,18 @@
         "es2021": true
     },
     "extends": "eslint:recommended",
+    "overrides": [
+        {
+          "files": ["**/*.cy.js"],
+          "env": { "cypress/globals": true },
+          "plugins": ["cypress"],
+          "extends": ["plugin:cypress/recommended"],
+          "rules": {
+            "cypress/no-unnecessary-waiting": "off",
+            "no-unused-vars": "off"
+          }
+        }
+      ],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
