--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@babel/preset-env": "^7.19.4",
+    "cypress": "^13.4.0",
     "eslint": "^8.52.0",
+    "eslint-plugin-cypress": "^2.15.1",
     "jest": "^29.7.0",
     "jest-localstorage-mock": "^2.4.26",
     "live-server": "^1.2.2",
