--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,10 +20,10 @@
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
-    "globals": {
-        "test": "readonly",
-        "expect": "readonly"
-      },
+    // "globals": {
+    //     "test": "readonly",
+    //     "expect": "readonly"
+    //   },
     "rules": {
     }
 }
