--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint src/**/*.js",
     "prepare": "husky install",
     "test": "npm run test-unit",
-    "test-unit": "jest"
+    "test-unit": "jest",
+    "test-e2e": "cypress open"
   },
   "keywords": [],
   "author": "Noroff",
