--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,43 +1,31 @@
-# Simple workflow for deploying static content to GitHub Pages
 name: Deploy static content to Pages
 
 on:
-
   pull_request:
-    branches: ["master"]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
+    branches:
+      - master
 
 jobs:
-  # Single deploy job since we're just deploying
   deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-      - name: Setup Pages
+        uses: actions/checkout@v2
+
+      - name: Build Static Content
+        # Add your build steps here, if needed
+
+      - name: Configure Pages
         uses: actions/configure-pages@v3
+        with:
+          target_branch: gh-pages
+          folder: path/to/static-content # Replace with your content directory
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          # Upload entire repository
-          path: '.'
+          path: path/to/static-content # Replace with your content directory
+
       - name: Deploy to GitHub Pages
-        id: deployment
         uses: actions/deploy-pages@v2
