--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "format": "prettier -w src/**/*.js",
     "lint": "eslint src/**/*.js",
     "prepare": "husky install",
-    "test": "npm run test-unit",
+    "test": "npm run test-unit && cy:run",
     "test-unit": "jest",
     "cy:open": "cypress open",
     "cy:run": "cypress run"
