--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cypress": "^13.4.0",
     "eslint": "^8.52.0",
     "eslint-plugin-cypress": "^2.15.1",
+    "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-localstorage-mock": "^2.4.26",
     "live-server": "^1.2.2",
